--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-/node_modules/
-/public/build/
-
 .DS_Store
-
-.odo/odo-file-index.json
-.odo/env
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+.vercel
+.output
